Uploaded image for project: 'Log4cxx'
  1. Log4cxx
  2. LOGCXX-209

A message of type wchar_t* is not beeing written correctly to the internal message buffer (Revision: 592627)

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • 0.10.0
    • 0.10.0
    • Appender
    • None
    • Windows 2003 R2 / Visual Studio 2005

    Description

      A message (of type wchar_t*) which is dynamically allocated (using malloc) and send to the Logger is not written correctly. This is because it is send to CharMessageBuffer instead of WideMessageBuffer (in MessageBuffer class).

      Workarround:
      cast wchar_t* to const wchar_t* before calling LOG4CXX_INFO (or any other level).

      Attachments

        Activity

          People

            carnold@apache.org Curt Arnold
            doormalena Alexander
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: