LOGCXX-209: A message of type wchar_t* not written properly